--- a/Services/User/appsettings.json
+++ b/Services/User/appsettings.json
@@ -17,5 +17,8 @@
     "Issuer": "http://localhost:5000",
     "Audience": "http://localhost:5000",
     "ExpiresInMinutes": 60
+  },
+  "RefreshToken": {
+    "ExpiresInDays": 30
   }
 }
