--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -8,7 +8,17 @@
 
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="11.11.0" />
+      <PackageReference Include="Google.Protobuf" Version="3.30.1" />
+      <PackageReference Include="Grpc.AspNetCore" Version="2.70.0" />
+      <PackageReference Include="Grpc.Tools" Version="2.71.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Protobuf Include="Protos\File.proto" GrpcServices="Both" />
     </ItemGroup>
 
 </Project>
