--- a/Services/File/File.csproj
+++ b/Services/File/File.csproj
@@ -8,9 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="14.0.0" />
         <PackageReference Include="AWSSDK.S3" Version="3.7.416" />
         <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
         <PackageReference Include="FluentValidation" Version="11.11.0" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="Google.Protobuf" Version="3.30.2" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.70.0" />
         <PackageReference Include="Grpc.Tools" Version="2.71.0">
