--- a/Tests/File.Tests/File.Tests.csproj
+++ b/Tests/File.Tests/File.Tests.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="AWSSDK.S3" Version="3.7.416" />
       <PackageReference Include="Bogus" Version="35.6.2" />
       <PackageReference Include="FluentAssertions" Version="8.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.3" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
       <PackageReference Include="Moq" Version="4.20.72" />
       <PackageReference Include="Testcontainers.Redis" Version="4.3.0" />
